--- a/spgInit.in
+++ b/spgInit.in
@@ -34,6 +34,9 @@ scalingFactor          = 0.5
 # This sets the maximum number of attempts to generate any given spacegroup
 maxAttempts            = 100
 
+# This sets the output directory
+outputDir              = temp
+
 # Verbosity indicates how much output to generate in the log file
 # 'n' is no output, 'r' is regular output, and 'v' is verbose output
 verbosity              = r
