--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,17 @@
-project(spgInit)
+project(spgGen)
 
 cmake_minimum_required(VERSION 2.6)
 
-set(spgInit_SRCS
+set(spgGen_SRCS
     src/crystal.cpp
     src/elemInfo.cpp
     src/main.cpp
-    src/spgInitCombinatorics.cpp
-    src/spgInitOptions.cpp
-    src/spgInit.cpp)
+    src/spgGenCombinatorics.cpp
+    src/spgGenOptions.cpp
+    src/spgGen.cpp)
 
-include_directories(${spgInit_SOURCE_DIR}/include)
+include_directories(${spgGen_SOURCE_DIR}/include)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
-add_executable (spgInit ${spgInit_SRCS})
+add_executable (spgGen ${spgGen_SRCS})
