--- a/samples/accuracyTests/cubic.in
+++ b/samples/accuracyTests/cubic.in
@@ -1,28 +1,28 @@
-First line is a comment line
+Test for accuracy for spacegroups with cubic lattices
 
 # Anything to the right of a hash is a comment
 
 # Composition is set by atomic symbols followed by number as such:
-composition            = Mg4Al2
+composition            = Ti96O192
 
 # Which spacegroups to generate are set as follows (hyphens and commas work)
-spacegroups            = 1-8, 10, 25, 28, 30-32
+spacegroups            = 195-230
 
 # lattice mins and maxes set constraints on the lattice to be generated.
 # Distances are in Angstroms and angles are in degrees.
 #                           a,    b,    c, alpha,  beta, gamma
 latticeMins            =  3.0,  3.0,  3.0,  60.0,  60.0,  60.0
-latticeMaxes           = 10.0, 10.0, 10.0, 120.0, 120.0, 120.0
+latticeMaxes           = 20.0, 20.0, 20.0, 120.0, 120.0, 120.0
 
 # minVolume and maxVolume specify constraints on the volume in Angstroms
 # If the volume is not within this range, it will be rescaled so that it is
 # If you remove minVolume or specify it to be -1, there will be no minVolume
 # Same goes for maxVolume
-minVolume              = 450
-maxVolume              = 500
+minVolume              = 2800
+maxVolume              = 3200
 
 # numOfEachSpgToGenerate tells us how many crystals of each spg to generate
-numOfEachSpgToGenerate = 3
+numOfEachSpgToGenerate = 10
 
 # For advanced users: by default, the program will only generate a spacegroup
 # for a crystal if it can use the most general Wyckoff position at least
