--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ if (BUILD_RELEASE)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
   endif(UNIX)
   if(MSVC)
+    SET(CMAKE_BUILD_TYPE "Release")
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /O2")
   endif(MSVC)
 else (BUILD_RELEASE)
