--- a/spgGen.in
+++ b/spgGen.in
@@ -1,11 +1,10 @@
 First line is a comment line
 
 # Anything to the right of a hash is a comment
-
 # Composition is set by atomic symbols followed by number as such:
 composition            = Mg4Al2
 
-# Which spacegroups to generate are set as follows (hyphens and commas work)
+# The spacegroups to generate are set as follows (hyphens and commas work)
 spacegroups            = 1-8, 10, 25, 28, 30-32
 
 # lattice mins and maxes set constraints on the lattice to be generated.
@@ -15,9 +14,9 @@ latticeMins            =  3.0,  3.0,  3.0,  60.0,  60.0,  60.0
 latticeMaxes           = 10.0, 10.0, 10.0, 120.0, 120.0, 120.0
 
 # minVolume and maxVolume specify constraints on the volume in Angstroms
-# If the volume is not within this range, it will be rescaled so that it is
-# If you remove minVolume or specify it to be -1, there will be no minVolume
-# Same goes for maxVolume
+# If a crystal's volume is not within this range, it will be rescaled so that
+# it is. If the minVolume tag is removed or specified to be -1, there will be no
+# minVolume. The same goes for maxVolume.
 minVolume              = 450
 maxVolume              = 500
 
@@ -28,34 +27,30 @@ numOfEachSpgToGenerate = 3
 # for a crystal if it can use the most general Wyckoff position at least
 # once. This is because the spacegroup is not guaranteed if the most
 # general Wyckoff position is not used at least once. The user, however,
-# may turn off that option here by setting it to false.
-# If this is the case, more compositions may be generated for a particular
-# spacegroup, but they may not be the correct spacegroup (about a 50 or 60%
-# chance overall - but it differs with each spacegroup)
-
+# may turn off that option here by setting it to false. If this is the case,
+# more spacegroups may be generated for a particular composition, but there is
+# a chance that it won't be the correct spacegroup.
 #forceMostGeneralWyckPos = false
 
 # For advanced users: this allows us to force an element to be assigned
 # to a specific Wyckoff position. If you wish to force an element to be in
 # the same Wyckoff position multiple times, just repeat the tag multiple times
-# i. e. add 'forceWyckPos Mg = a' on as many lines as you want to force the
-# Wyckoff position
-
+# (i. e. add 'forceWyckPos Mg = a' on as many lines as you want to force the
+# Wyckoff position).
 #forceWyckPos Mg        = a
 
 # We can set minimum radii (Angstroms) for individual atoms
-
 #setRadius Ti           = 0.5
 
-# Or for all atoms. A min radius for an individual atom trumps this one
-# If the default min radius of the atom is less than this input value, then
-# the min radius of that atom is set to be this value
-# Value is in Angstroms
+# or for all atoms. A min radius for an individual atom gets precedence over
+# this one. If the default min radius of the atom is less than this input
+# value, then the min radius of that atom is set to be this value.
+# Units are in Angstroms.
 setMinRadii            = 0.3
 
-# This scaling factor will scale all radii that were not explicity set
-# The new radii are equal to (radius * scalingFactor)
-# This is particularly useful when changing the pressure of a crystal
+# This scaling factor will scale all radii that were not explicity set.
+# The new radii are equal to radius * scalingFactor
+# This is useful, for example, when changing the pressure of a crystal.
 scalingFactor          = 0.5
 
 # This sets the maximum number of attempts to generate any given spacegroup
@@ -68,4 +63,4 @@ outputDir              = spgGenOut
 # 'n' is no output, 'r' is regular output, and 'v' is verbose output
 verbosity              = r
 
-# In the output POSCAR, the name is <composition>_<spg>-<index>
+# The names of the output POSCARs are <composition>_<spg>-<index>
